--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "axios": "^0.17.1",
     "react": "16.0.0",
     "react-native": "0.51.0",
-    "react-native-svg": "^6.0.1-rc.1"
+    "react-native-svg": "^6.0.1-rc.1",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "babel-jest": "22.0.3",
