--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.0.0",
     "react-native": "0.51.0",
     "react-native-fs": "^2.9.7",
+    "react-native-navigation": "^1.1.336",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
