--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "storybook": "storybook start -p 7007"
   },
   "dependencies": {
+    "@storybook/cli": "^3.3.9",
     "axios": "^0.17.1",
     "firebase": "^4.8.1",
     "react": "16.0.0",
@@ -21,7 +23,14 @@
     "babel-jest": "22.0.3",
     "babel-preset-react-native": "4.0.0",
     "jest": "22.0.3",
-    "react-test-renderer": "16.0.0"
+    "react-test-renderer": "16.0.0",
+    "@storybook/react-native": "^3.3.9",
+    "@storybook/addon-actions": "^3.3.9",
+    "@storybook/addon-links": "^3.3.9",
+    "@storybook/addons": "^3.3.9",
+    "babel-core": "^6.26.0",
+    "react-dom": "16.0.0",
+    "prop-types": "^15.6.0"
   },
   "jest": {
     "preset": "react-native"
